Prepare MSA-Net repo for GitHub deployment